# universal-auth-service

./: .gitignore  ARCHITECTURE_AND_IMPLEMENTATION.md  Cargo.toml  LICENSE  PROJECT_EXPLANATION.md  README.md  configuration.yaml  database_migration.sql  test_email.rs  universal-auth-service.postman_collection.json
src/: configuration.rs  lib.rs  main.rs
src/module/: mod.rs
src/module/auth/: cache.rs  handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/module/email/: service.rs
src/module/health/: handler.rs  mod.rs  model.rs  service.rs
src/routes/: mod.rs
